NavigationView implementation.Beginning

--- a/IdeaKeeper/app/src/main/res/values/colors.xml
+++ b/IdeaKeeper/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#008a9a</color>
     <color name="colorAccent">#004081</color>
     <color name="mainBackground">#e2e2e2</color>
+    <color name="colorWhite">#e2e2e2</color>
 </resources>
