--- a/IdeaKeeper/app/src/main/res/values/styles.xml
+++ b/IdeaKeeper/app/src/main/res/values/styles.xml
@@ -7,12 +7,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style-->
-    <style name="AppTheme" parent="AppTheme.Base" />
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar" />
 
-    <style name="AppTheme.Base" parent="Theme.AppCompat">
+    <style name="AppDefault" parent="AppTheme">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="windowActionBar">false</item>
+        <item name="colorControlNormal">@color/colorWhite</item>
     </style>
 
 </resources>
