--- a/IdeaKeeper/app/src/main/res/layout/activity_main.xml
+++ b/IdeaKeeper/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 android:background="?attr/colorPrimary"/>
 
             <android.support.design.widget.TabLayout
@@ -39,6 +40,18 @@
             android:layout_height="match_parent"
             android:id="@+id/viewPager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_plus"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            app:backgroundTint="@color/colorPrimary"
             />
 
     </android.support.design.widget.CoordinatorLayout>
