--- a/IdeaKeeper/app/src/main/res/menu/menu.xml
+++ b/IdeaKeeper/app/src/main/res/menu/menu.xml
@@ -5,7 +5,9 @@
         android:id="@+id/search"
         android:title="@string/search_title"
         android:orderInCategory="1"
-        android:icon="@drawable/magnify"
+        android:icon="@mipmap/ic_magnify_white_24dp"
         app:showAsAction="ifRoom"
         />
+    <!--android:icon="@drawable/magnify"-->
+
 </menu>
